--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "flowbite": "^2.2.0",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.1",
     "tailwind-scrollbar": "^3.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
