--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@taiga-ui/layout": "^3.56.0",
     "@taiga-ui/styles": "^3.56.0",
     "@tinkoff/ng-dompurify": "^4.0.0",
+    "chart.js": "^4.4.1",
     "express": "^4.18.2",
     "flowbite": "^2.2.0",
     "jwt-decode": "^4.0.0",
